[package]
name = "class-selection-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.7"
block-modes = "0.8"
md5 = "0.7"
base64 = "0.13"
hex-literal = "0.3"
urlencoding = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.9", features = ["json"] }
chrono = "0.4"
